Solve jumping heading problem

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,7 @@ body {
 .about-me {
     display: flex;
     flex-direction:column;
-    justify-content:center;
+    justify-content:flex-start;
     align-items:center;
     max-width: 2000px;
     height: 400px;
@@ -34,8 +34,8 @@ body {
             line-height: 0.702;
             text-align: center;
             font-weight: 300;
-            margin: 0px 0px 0px 0px;
             width: 100%;
+            margin-top: 100px;
     }
 
     &__text {
@@ -108,7 +108,7 @@ body {
 @media (max-width: 360px) { 
     .about-me {
         height:     600px;
-        gap:        30px;
+        gap:        50px;
     }
 
     .footer {
